--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/global/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/config/global/list.html
@@ -12,48 +12,63 @@
 			<div class="layui-main">
 				<!--/***** 面包屑 *****/-->
 				<div class="layui-elem-quote" style="margin-top: 10px;">
-					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a href="#">全局参数</a> <a><cite>列表</cite></a>
+					<span class="layui-breadcrumb"> <a><cite>全局配置</cite></a> <a><cite>全局参数</cite></a>
 					</span>
 				</div>
 				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
 					<i class="layui-icon">&#xe60b;</i> 全局参数
 				</blockquote>
-				<blockquote class="layui-elem-quote layui-quote-nm">
-					<div class="layui-inline">
-						<div class="layui-input-inline">
-							<a th:href="@{/admin/m/base/global/add.gsp}" class="layui-btn">新增</a>
+				<form th:action="@{/admin/m/base/global/edit.gsp}" th:object="${result}" class="layui-form" id="editForm" role="form" action="#" method="post">
+					<fieldset class="layui-elem-field layui-field-title">
+						<legend>全局参数</legend>
+					</fieldset>
+					<input th:field="*{id}" type="text" hidden="true" />
+					<div class="layui-form-item">
+						<label class="layui-form-label">协议：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="sysProtocol" th:field="*{sysProtocol}" placeholder="请输入协议" lay-verify="sysProtocol" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
 						</div>
 					</div>
-				</blockquote>
-				<table cellspacing="0" width="100%" class="layui-table" lay-even="" lay-skin="row">
-					<thead>
-						<tr>
-							<th width="40">#</th>
-							<th>协议</th>
-							<th>服务端口号</th>
-							<th>上下文路径</th>
-							<th>URL是否包含域名</th>
-							<th>附件发布点</th>
-							<th>版本号</th>
-							<th width="90">操作</th>
-						</tr>
-					</thead>
-					<tbody>
-						<tr th:if="${globalList == null or globalList.size() == 0}">
-							<td colspan="6" style="text-align: center;">暂时没有数据</td>
-						</tr>
-						<tr th:each="item,itemStat:${globalList}">
-							<td th:text="${itemStat.index+1}" style="text-align: center;"></td>
-							<td th:text="${item.sysProtocol}" style="text-align: center;"></td>
-							<td th:text="${item.sysPort}" style="text-align: center;"></td>
-							<td th:text="${item.contextPath}"></td>
-							<td style="text-align: center;"><label th:if="${item.withDomain==1}">是</label><label th:if="${item.withDomain==2}">否</label></td>
-							<td th:text="${item.uploadsPublishpointId}"></td>
-							<td th:text="${item.sysVersion}" style="text-align: center;"></td>
-							<td><a th:href="|@{/admin/m/base/global/edit_}${item.id}.gsp|" class="layui-btn layui-btn-small"> <i class="layui-icon"></i></a> <a th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
-						</tr>
-					</tbody>
-				</table>
+					<div class="layui-form-item">
+						<label class="layui-form-label">服务端口号：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="sysPort" th:field="*{sysPort}" placeholder="请输入服务端口号" lay-verify="sysPort" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">上下文路径：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="contextPath" th:field="*{contextPath}" placeholder="请输入上下文路径" lay-verify="contextPath" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="260">
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">是否包含域名：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<select name="withDomain" th:field="*{withDomain}">
+								<option value="1">是</option>
+								<option value="2">否</option>
+							</select>
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">附件发布点：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="uploadsPublishpointId" th:field="*{uploadsPublishpointId}" placeholder="请输入附件发布点" lay-verify="uploadsPublishpointId" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<label class="layui-form-label">版本号：<span style="color: red">*</span></label>
+						<div class="layui-input-block">
+							<input type="text" name="sysVersion" th:field="*{sysVersion}" placeholder="请输入版本号" lay-verify="sysVersion" required autocomplete="off" class="layui-input" autofocus="autofocus" maxlength="21">
+						</div>
+					</div>
+					<div class="layui-form-item">
+						<div class="layui-input-block">
+							<button class="layui-btn" lay-submit="" lay-filter="submit1">立即提交</button>
+							<button type="reset" class="layui-btn layui-btn-primary">重置</button>
+						</div>
+					</div>
+				</form>
 			</div>
 		</div>
 		<div th:replace="fragments/footer_admin">底部</div>
@@ -62,12 +77,47 @@
 <div th:replace="fragments/import_js_admin">引入js</div>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    var deleteUrl = /*[[@{/admin/m/base/global/delete_{id}.gsp}]]*/;
-    function del(id){
-        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
-            location.reload();
-        });       
-    }
+    var form = layui.form();
+    //自定义验证规则
+    form.verify({
+        sysProtocol : function(value) {
+            if (value.length < 2) {
+                return '协议至少得2个字哦！';
+            } else if (value.length > 20) {
+                return '协议不能太长哦，最长20个字！';
+            }
+        },
+        sysPort : function(value) {
+            if (value.length < 2) {
+                return '服务端口号至少得2个字哦！';
+            } else if (value.length > 20) {
+                return '服务端口号不能太长哦，最长20个字！';
+            }
+        },
+        contextPath : function(value) {
+            if (value.length < 5) {
+                return '上下文路径至少得5个字哦！';
+            } else if (value.length > 255) {
+                return '上下文路径不能太长哦，最长255个字！';
+            }
+        },
+        uploadsPublishpointId : function(value) {
+            if (value.length < 1) {
+                return '附件发布点至少得1个字哦！';
+            } else if (value.length > 20) {
+                return '附件发布点不能太长哦，最长20个字！';
+            }
+        },
+        sysVersion : function(value) {
+            if (value.length < 2) {
+                return '版本号至少得2个字哦！';
+            } else if (value.length > 50) {
+                return '版本号不能太长哦，最长20个字！';
+            }
+        }
+    });
+    //监听提交
+    form.on('submit(submit1)', function(data) {
+    });
     /*]]>*/
 </script>
-</html>
