--- a/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/material/video/list.html
+++ b/tg-cms/src/main/webapp/WEB-INF/views/admin/modules/material/video/list.html
@@ -1,136 +1,98 @@
 <!DOCTYPE html>
 <html lang="zh-cn" xmlns="http://www.w3.org/1999/xhtml" xmlns:th="http://www.thymeleaf.org">
 <head>
-<title th:text="|#{customer.systemTitle}-素材管理-视频管理|">图灵谷</title>
+<title th:text="|#{customer.systemTitle}-图灵谷-全局配置-全局配置|">图灵谷</title>
 <div th:replace="fragments/head_admin">head</div>
-<!--/***** 当前页css  start *****/-->
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.fixedHeader.css}" />
-<link rel="stylesheet" type="text/css" th:href="@{/resources/vendor/tgCube/css/libs/dataTables.tableTools.css}" />
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<link th:href="@{/resources/vendor/bootstrap/plugins/toggle/css/bootstrap-toggle.min.css}" rel="stylesheet" />
-<link th:href="@{/resources/vendor/webuploader/webuploader.css}" rel="stylesheet" />
-<!--/***** 当前页css  end *****/-->
 </head>
-<body class="theme-turquoise fixed-header fixed-leftmenu fixed-footer">
-	<div id="theme-wrapper">
+<body>
+	<div class="layui-layout layui-layout-admin">
 		<div th:replace="fragments/nav_admin">导航栏</div>
-		<div id="page-wrapper" class="container">
-			<div th:replace="fragments/menu_admin::menu(root=material,current=video)">菜单栏</div>
-			<div id="content-wrapper">
-				<div th:replace="fragments/breadcrumbs_admin::breadcrumbs(parent=素材管理,current=视频管理)">面包屑栏</div>
-				<div class="row">
-					<div class="col-lg-12">
-						<div class="main-box">
-							<header class="main-box-header">
-								<div class="row m-b-sm m-t-sm">
-									<div class="col-md-9">
-										<a th:href="@{/admin/m/base/video/fileUpload.gsp}" data-target="#commonWin" class="btn btn-primary btn-sm" type="button" data-toggle="modal"><i class="fa fa-plus"></i>&nbsp;上传视频</a>
-									</div>
-									<div class="col-md-3">
-										<div class="input-group">
-											<input id="simpleQueryParam" name="simpleQueryParam" type="text" placeholder="请输入关键字搜索" class="form-control" /> <span class="input-group-btn">
-												<button onclick="myTable.filter()" type="button" class="btn btn-primary">搜索</button>
-											</span>
-										</div>
-									</div>
-								</div>
-							</header>
-							<div class="main-box-body clearfix">
-								<table id="dataTable" cellspacing="0" width="100%" class="table table-striped table-hover">
-									<thead>
-										<tr>
-											<th width="60" class="text-center">#</th>
-											<th>视频名称</th>
-											<th>视频类型</th>
-											<th>文件路径</th>
-											<th>文件大小</th>
-											<th>描述</th>
-											<th width="100" class="text-center">操作</th>
-										</tr>
-									</thead>
-								</table>
-							</div>
+		<div th:replace="fragments/menu_admin::menu(parent=material,child=video)">菜单栏</div>
+		<div class="layui-body">
+			<div class="layui-main">
+				<!--/***** 面包屑 *****/-->
+				<div class="layui-elem-quote" style="margin-top: 10px;">
+					<span class="layui-breadcrumb"> <a><cite>素菜管理</cite></a> <a href="#">视频管理</a> <a><cite>列表</cite></a>
+					</span>
+				</div>
+				<blockquote class="layui-elem-quote layui-quote-nm" style="color: #FF5722">
+					<i class="layui-icon">&#xe60b;</i> 视频管理
+				</blockquote>
+				<blockquote class="layui-elem-quote layui-quote-nm">
+					<div class="layui-inline">
+						<div class="layui-input-inline">
+							<a th:href="@{/admin/m/base/video/fileUpload.gsp}" class="layui-btn">新增</a>
 						</div>
 					</div>
-				</div>
-				<div th:replace="fragments/footer_admin">底部</div>
+				</blockquote>
+				<form th:action="@{/admin/m/base/video/list.gsp}" method="get">
+					<div class="layui-form-item">
+						<blockquote class="layui-elem-quote layui-quote-nm">
+							<div class="layui-inline">
+								<div class="layui-input-inline" style="width: 200px;">
+									<input type="search" id="simpleQueryParam" name="simpleQueryParam" placeholder="关键字" autocomplete="off" class="layui-input">
+								</div>
+								<button class="layui-btn" lay-submit="" lay-filter="searchForm">
+									<i class="layui-icon">&#xe615;</i>
+								</button>
+							</div>
+						</blockquote>
+					</div>
+				</form>
+				<table cellspacing="0" width="100%" class="layui-table" lay-even="" lay-skin="row">
+					<thead>
+						<tr>
+							<th width="60" class="text-center">#</th>
+							<th>视频名称</th>
+							<th>视频类型</th>
+							<th>文件路径</th>
+							<th>文件大小</th>
+							<th>描述</th>
+							<th width="90" class="text-center">操作</th>
+						</tr>
+					</thead>
+					<tbody>
+						<tr th:if="${videoList.records == null or videoList.records.size() == 0}">
+							<td colspan="7" style="text-align: center;">暂时没有数据</td>
+						</tr>
+						<tr th:each="item,itemStat:${videoList.records}">
+							<td th:text="${videoList.pageSize*(videoList.page-1)+itemStat.index+1}" style="text-align: center;"></td>
+							<td th:text="${item.videoName}" style="text-align: center;"></td>
+							<td th:text="${item.format}" style="text-align: center;"></td>
+							<td th:text="${item.videoPath}"></td>
+							<td th:text="${item.videoLength}" style="text-align: center;"></td>
+							<td th:text="${item.description}"></td>
+							<td><a th:href="|@{/admin/m/base/image/show_}${item.id}.gsp|" class="layui-btn layui-btn-primary layui-btn-small"><i class="layui-icon">&#xe615;</i></a> <a th:onclick="|del('${item.id}')|" class="layui-btn layui-btn-normal layui-btn-small"> <i class="layui-icon"></i></a></td>
+						</tr>
+					</tbody>
+				</table>
 			</div>
 		</div>
+		<div th:replace="fragments/footer_admin">底部</div>
 	</div>
 </body>
 <div th:replace="fragments/import_js_admin">引入js</div>
-<!--/***** 当前页js start *****/-->
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.fixedHeader.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/dataTables.tableTools.js}"></script>
-<script th:src="@{/resources/vendor/tgCube/js/jquery.dataTables.bootstrap.js}"></script>
-<!--/* Switch复选框按钮  修改是否可用用*/-->
-<script th:src="@{/resources/vendor/bootstrap/plugins/toggle/js/bootstrap-toggle.min.js}"></script>
-<script th:src="@{/resources/vendor/ckplayer/ckplayer.js}"></script>
-<!--/* 模板引擎生成数据 */-->
+</html>
 <script th:inline="javascript">
     /*<![CDATA[*/
-    //表格
-    var myTable;
-    //表格列定义
-    var columnDefs = [ {
-        //第一列，用来显示序号
-        "searchable" : false,
-        "orderable" : false,
-        "targets" : 0
-    } ];
-    var columns = [ {
-        //第一列，用来显示序号
-        "data" : null,
-        "class" : "text-center"
-    }, {
-        "data" : "videoName"
-    }, {
-        "data" : "format"
-    }, {
-        "data" : "videoPath"
-    }, {
-        "data" : "videoLength",
-        render : function(data, type, row, meta) {
-            return TG_UTIL.fileSize(data);
-        }
-    }, {
-        "data" : "description"
-    }, {
-        "data" : null,
-        "class" : "text-center", //最后一列，操作按钮
-        render : function(data, type, row, meta) {
-            var showUrlPath = /*[[@{/admin/m/base/video/show_{id}.gsp}]]*/''; //修改地址
-            //查看按钮
-            var result = '<a href="' + showUrlPath.replace("{id}", row.id) + '" data-target="#commonWin" data-toggle="modal" title="查看" class="btn btn-primary btn-xs"><i class="fa fa-eye"></i></a>';
-            //删除按钮
-            result += ' <a href="#" type="button" onclick="myTable.deleteItem(\'' + row.id + '\')" class="btn btn-danger btn-xs"><i class="fa fa-trash-o"></i></a>';
-            return result;
-        }
-    } ];
-    //ajax参数
-    var ajaxDataParamFun = function(d) {
-        d.simpleQueryParam = $('#simpleQueryParam').val(); //模糊查询
-    };
-    //表格setting
-    var setting = {
-        listUrl : /*[[@{/admin/m/base/video/list.gsp}]]*/'url',
-        deleteUrl : /*[[@{/admin/m/base/video/delete_}]]*/'url',
-        columnDefs : columnDefs, //表格列定义
-        columns : columns, //表格列
-        dataTableDiv : 'dataTable', //表格
-        ajaxDataParamFun : ajaxDataParamFun, //ajax参数
-        pageable : true, //是否分页
-        showIndexColumn : true, //是否显示第一列的索引列
-        enabledChange : false
-    };
-    //创建表格
-    myTable = new TG_Tabel.createNew(setting);
-    //加载完成后执行
-    $(function() {
-        //表格初始化
-        myTable.init();
-    });
+     var result = /*[[${videoList}]]*/;
+    $(function(){
+        $("#simpleQueryParam").val(GetQueryString("simpleQueryParam"));
+        var option = {
+            listUrl : /*[[@{/admin/m/base/video/list.htm?}]]*/,
+            totalPages : result.totalPages,
+            page : result.page,
+            param : {
+                simpleQueryParam
+            }
+        };
+        tg_basePage(option);
+    })
+    var deleteUrl = /*[[@{/admin/m/base/video/delete_{id}.gsp}]]*/;
+    function del(id){
+        tg_deleteItem(deleteUrl.replace('{id}',id), function(){
+            location.reload();
+        });       
+    }
     /*]]>*/
 </script>
-</html>
