--- a/tg-cms/src/main/webapp/template/default/fragments/import_js.html
+++ b/tg-cms/src/main/webapp/template/default/fragments/import_js.html
@@ -14,6 +14,7 @@
 <script th:src="@{/template/default/_resources/js/plugins/owl2-carousel-v2.js}"></script>
 <script th:src="@{/template/default/_resources/js/plugins/owl2-carousel-v3.js}"></script>
 <script th:src="@{/template/default/_resources/js/plugins/owl2-carousel-v4.js}"></script>
+<script th:src="@{/template/default/_resources/vendor/back-to-top.js}"></script>
 <script type="text/javascript">
     jQuery(document).ready(function() {
         App.init();
